k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - http:
        paths:
          - path: /usercenter
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port: 
                  number: 8000
          - path: /linkmanager
            pathType: Prefix
            backend:
              service:
                name: link-svc
                port:
                  number: 8001
